--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.294.0",
-    "next": "latest",
+    "next": "13.5.3",
     "next-themes": "^0.2.1",
     "react": "latest",
     "react-dom": "latest"
